# C-Plus-Plus-homeworks

./: README.md
HW1/: mul.asm
HW2/: README.md  big_integer.cpp  big_integer.h
HW2/op_vector/: op_vector.cpp  op_vector.h
HW4/: CMakeLists.txt
HW4/consol_utility/: consol_utility.cpp
HW4/consol_utility/class_helper/: class_helper.cpp  class_helper.h
HW4/consol_utility/class_helper/bit_storage/: bit_storage.cpp  bit_storage.h
HW4/gtest/: gtest-all.cc  gtest_main.cc  haffman_algo_tests.cpp  test1Mb.txt
HW4/huffman_algorithm/: huffman_coding.cpp  huffman_coding.h
